# simple

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: main.yml
src/: CMakeLists.txt
